# cpp_cmake_template

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  run-test.sh
src/: CMakeLists.txt
src/core/: BoundingBox.h  BoundingSphere.h  Color.h  Color32.h  Config.h  MathDetails.h  Matrix.h  Module.h  Plane.h  Quaternion.h  Ray.h  Rect.h  Vector2.h  Vector3.h  Vector4.h
src/core/Android/: Module.cpp
src/core/Windows/: Module.cpp
src/core/macOS/: Module.cpp
src/render/: RenderModule.cpp  RenderModule.h  RenderSystem.h
test/: CMakeLists.txt  core_test.cpp  main.cpp
